[metadata]
name = pogym
version = 0.1.0
description = " A collection of POMDP environments."
license = "MIT"

author=Thiago D. Simão
author_email=tdsimao@gmail.com
long_description = file: README.md
long_description_content_type=text/markdown
url=https://github.com/tdsimao/pogym
keywords = reinforcement-learning, gym-environments
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
install_requires=
    gym
tests_require=
    pytest


[options.packages.find]
exclude =
    tests
